--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -20,7 +20,11 @@
 
 
 "block.mmorpg.teleporter":"地图装置",
-
+"block.mmorpg.station.salvaging": "MS回收台",
+"block.mmorpg.station.cooking": "MS烹饪台",
+"block.mmorpg.station.alchemy": "MS炼药台",
+"block.mmorpg.station.enchanting": "MC附魔台",
+"block.mmorpg.station.gear_crafting": "MS装备制作台",
 
 "mmorpg.tooltip.item_modifiable_in_station":"可以在装备强化台中使用",
 "mmorpg.tooltip.lootbox":"这里面装着啥呢？",
@@ -121,8 +125,6 @@
 "mmorpg.chest_type.map":"地图",
 "mmorpg.chest_type.rune":"符文",
 "mmorpg.chest_type.support_gem":"辅助宝石",
-
-
 	"mmorpg.gem_rank.chipped":"缺损的",
 	"mmorpg.gem_rank.cracked":"开裂的",
 	"mmorpg.gem_rank.divine":"神圣的",
@@ -656,7 +658,7 @@
 	"mmorpg.affix.wep_item_perc":"残忍的",
 	"mmorpg.affix.wildfire_staff":"野火长杖",
 	"mmorpg.affix.wolf_pelt":"狼首皮盔",
-
+	
 
 
 
@@ -761,6 +763,7 @@
 	"mmorpg.tag.spell.totem":"图腾",
 	"mmorpg.tag.spell.trap":"陷阱",
 	"mmorpg.tag.spell.weapon_skill":"武器技能",
+	"mmorpg.tag.spell.cast_speed_to_cooldown": "施法冷却",
 
 
 
@@ -777,6 +780,7 @@
 	"mmorpg.chest_content.map":"地图",
 	"mmorpg.chest_content.rune":"符文",
 	"mmorpg.chest_content.support_gem":"辅助宝石",
+	
 
 
 
@@ -843,14 +847,14 @@
 	"mmorpg.mob_rarity.rare":"珍稀",
 	"mmorpg.mob_rarity.summon":"召唤",
 	"mmorpg.mob_rarity.uncommon":"少见",
-	"mmorpg.rarity..common":"普通",
-	"mmorpg.rarity..epic":"史诗",
-	"mmorpg.rarity..legendary":"传说",
-	"mmorpg.rarity..mythic":"神话",
-	"mmorpg.rarity..rare":"珍稀",
-	"mmorpg.rarity..runeword":"铭符",
-	"mmorpg.rarity..uncommon":"少见",
-	"mmorpg.rarity..unique":"独特",
+	"mmorpg.rarity.common":"普通",
+	"mmorpg.rarity.epic":"史诗",
+	"mmorpg.rarity.legendary":"传说",
+	"mmorpg.rarity.mythic":"神话",
+	"mmorpg.rarity.rare":"珍稀",
+	"mmorpg.rarity.runeword":"铭符",
+	"mmorpg.rarity.uncommon":"少见",
+	"mmorpg.rarity.unique":"独特",
 
 
 
@@ -1145,6 +1149,256 @@
 	"mmorpg.talent.water_resist_big":"核心冰霜抗性",
 	"mmorpg.talent.wind_dancer":"凤舞者",
 	"mmorpg.talent.witchs_brew":"女巫之酿",
+
+
+
+
+
+
+	"mmorpg.talent.arcanist_class": "秘术师",
+	"mmorpg.talent.arcanist_class_0": "无尽法力",
+	"mmorpg.talent.arcanist_class_1": "秘术斗篷",
+	"mmorpg.talent.arcanist_class_2": "不灭意志",
+	"mmorpg.talent.arcanist_class_3": "严峻守卫",
+	"mmorpg.talent.arcanist_class_4": "灵能奔涌",
+	"mmorpg.talent.arcanist_class_5": "图腾大师",
+	"mmorpg.talent.arcanist_class_6": "战略奇才",
+	"mmorpg.talent.ascendant_class": "占星术师",
+	"mmorpg.talent.ascendant_class_0": "万事俱备",
+	"mmorpg.talent.ascendant_class_1": "飞升之匙",
+	"mmorpg.talent.ascendant_class_2": "无边无际",
+	"mmorpg.talent.ascendant_class_3": "包罗万象",
+	"mmorpg.talent.ascendant_class_4": "狂热之路",
+	"mmorpg.talent.ascendant_class_5": "力量之路",
+	"mmorpg.talent.ascendant_class_6": "坚韧之路",
+	"mmorpg.talent.assassin_class": "暗杀者",
+	"mmorpg.talent.assassin_class_0": "干净利落",
+	"mmorpg.talent.assassin_class_1": "蓄势待发",
+	"mmorpg.talent.assassin_class_2": "强而有力",
+	"mmorpg.talent.assassin_class_3": "会心一击",
+	"mmorpg.talent.assassin_class_4": "猛毒",
+	"mmorpg.talent.assassin_class_5": "致命毒师",
+	"mmorpg.talent.assassin_class_6": "卧薪尝胆",
+	"mmorpg.talent.battlemage_class": "战斗法师",
+	"mmorpg.talent.battlemage_class_0": "破防痛击",
+	"mmorpg.talent.battlemage_class_1": "自我均衡",
+	"mmorpg.talent.battlemage_class_2": "转换再生",
+	"mmorpg.talent.battlemage_class_3": "元素之神",
+	"mmorpg.talent.battlemage_class_4": "文武双全",
+	"mmorpg.talent.battlemage_class_5": "坚定决议",
+	"mmorpg.talent.battlemage_class_6": "背水一战",
+	"mmorpg.talent.champion_class": "勇者",
+	"mmorpg.talent.champion_class_0": "勇士之盾",
+	"mmorpg.talent.champion_class_1": "狂乱攻击",
+	"mmorpg.talent.champion_class_2": "放血者",
+	"mmorpg.talent.champion_class_3": "残酷命运",
+	"mmorpg.talent.champion_class_4": "强力防御",
+	"mmorpg.talent.champion_class_5": "临机应变",
+	"mmorpg.talent.champion_class_6": "狂热",
+	"mmorpg.talent.chieftain_class": "烈焰领主",
+	"mmorpg.talent.chieftain_class_0": "爆裂红莲",
+	"mmorpg.talent.chieftain_class_1": "烈焰之魂",
+	"mmorpg.talent.chieftain_class_2": "烈焰肌肤",
+	"mmorpg.talent.chieftain_class_3": "火神之柱",
+	"mmorpg.talent.chieftain_class_4": "明媚烈焰",
+	"mmorpg.talent.chieftain_class_5": "图腾烈焰",
+	"mmorpg.talent.chieftain_class_6": "饮火者",
+	"mmorpg.talent.elementalist_class": "元素使者",
+	"mmorpg.talent.elementalist_class_0": "烈焰造物",
+	"mmorpg.talent.elementalist_class_1": "寒霜造物",
+	"mmorpg.talent.elementalist_class_2": "雷电造物",
+	"mmorpg.talent.elementalist_class_3": "石灵大军",
+	"mmorpg.talent.elementalist_class_4": "石灵导师",
+	"mmorpg.talent.elementalist_class_5": "终结之路",
+	"mmorpg.talent.elementalist_class_6": "看破",
+	"mmorpg.talent.guardian_class": "守护者",
+	"mmorpg.talent.guardian_class_0": "势不可挡",
+	"mmorpg.talent.guardian_class_1": "自我飞升",
+	"mmorpg.talent.guardian_class_2": "肉身铁壁",
+	"mmorpg.talent.guardian_class_3": "可怖之人",
+	"mmorpg.talent.guardian_class_4": "超越生死",
+	"mmorpg.talent.guardian_class_5": "刚毅不屈",
+	"mmorpg.talent.guardian_class_6": "无尽苦难",
+	"mmorpg.talent.hunter_class": "猎手",
+	"mmorpg.talent.hunter_class_0": "狂风之力",
+	"mmorpg.talent.hunter_class_1": "神出鬼没",
+	"mmorpg.talent.hunter_class_2": "冷酷无情",
+	"mmorpg.talent.hunter_class_3": "分裂弹头",
+	"mmorpg.talent.hunter_class_4": "敏捷之手",
+	"mmorpg.talent.hunter_class_5": "迅捷射击",
+	"mmorpg.talent.hunter_class_6": "猎手之链",
+	"mmorpg.talent.jester_class": "吟游者",
+	"mmorpg.talent.jester_class_0": "魅力十足",
+	"mmorpg.talent.jester_class_1": "永世之舞",
+	"mmorpg.talent.jester_class_2": "轻柔节奏",
+	"mmorpg.talent.jester_class_3": "迷幻韵律",
+	"mmorpg.talent.jester_class_4": "普世之言",
+	"mmorpg.talent.jester_class_5": "多面能手",
+	"mmorpg.talent.jester_class_6": "调香师",
+	"mmorpg.talent.lich_class": "混沌巫妖",
+	"mmorpg.talent.lich_class_0": "黑暗之力",
+	"mmorpg.talent.lich_class_1": "异能积蓄",
+	"mmorpg.talent.lich_class_2": "寒霜盔甲",
+	"mmorpg.talent.lich_class_3": "异能注入",
+	"mmorpg.talent.lich_class_4": "异能爆破",
+	"mmorpg.talent.lich_class_5": "咒术大师",
+	"mmorpg.talent.lich_class_6": "混沌意志",
+	"mmorpg.talent.necromancer_class": "死灵法师",
+	"mmorpg.talent.necromancer_class_0": "仆从强化",
+	"mmorpg.talent.necromancer_class_1": "枯骨之盾",
+	"mmorpg.talent.necromancer_class_2": "无尽军团",
+	"mmorpg.talent.necromancer_class_3": "即刻召唤",
+	"mmorpg.talent.necromancer_class_4": "强军计划",
+	"mmorpg.talent.necromancer_class_5": "腐化壁垒",
+	"mmorpg.talent.necromancer_class_6": "献祭仆从",
+	"mmorpg.talent.raider_class": "掠夺者",
+	"mmorpg.talent.raider_class_0": "'狂乱'闪避",
+	"mmorpg.talent.raider_class_1": "'狂乱'守护",
+	"mmorpg.talent.raider_class_2": "当机立断",
+	"mmorpg.talent.raider_class_3": "身姿矫健",
+	"mmorpg.talent.raider_class_4": "元素抵抗",
+	"mmorpg.talent.raider_class_5": "坚韧不拔",
+	"mmorpg.talent.raider_class_6": "其疾如风",
+	"mmorpg.talent.spell_physical_damage_big": "核心物理技能伤害",
+	"mmorpg.talent.trickster_class": "魔术师",
+	"mmorpg.talent.trickster_class_0": "彻底疯狂",
+	"mmorpg.talent.trickster_class_1": "足智多谋",
+	"mmorpg.talent.trickster_class_2": "神行太保",
+	"mmorpg.talent.trickster_class_3": "灵活多变",
+	"mmorpg.talent.trickster_class_4": "为我所用",
+	"mmorpg.talent.trickster_class_5": "圆滑处世",
+	"mmorpg.talent.trickster_class_6": "厚重斗篷",
+	"mmorpg.effect.endurance_charge": "'耐力'充能",
+	"mmorpg.effect.fire_golem_buff": "火焰傀儡",
+	"mmorpg.effect.frenzy_charge": "'狂热'充能",
+	"mmorpg.effect.gale_force": "'狂风之力'",
+	"mmorpg.effect.ice_golem_buff": "冰霜傀儡",
+	"mmorpg.effect.lightning_golem_buff": "雷电傀儡",
+	"mmorpg.effect.missile_barrage": "Missile Barrage",
+	"mmorpg.effect.power_charge": "'力量'充能",
+
+
+
+
+
+
+	"mmorpg.grouped_stat_section.core": "主要属性",
+	"mmorpg.grouped_stat_section.regen": "恢复属性",
+	"mmorpg.grouped_stat_section.elemental_damage": "元素伤害",
+	"mmorpg.grouped_stat_section.elemental_resists": "元素抗性",
+	"mmorpg.grouped_stat_section.ailments": "负面效果",
+	"mmorpg.grouped_stat_section.other": "其他属性",
+	"mmorpg.word.hardcapinfo": "这是该数据可达到的最大值，无法被修改",
+	"mmorpg.word.mincapinfo": "这是该数据可达到的最小值，无法被修改",
+	"mmorpg.word.currentvalueinfo": "当前属性数值",
+	"mmorpg.stat_group.ailment_chance": "负面效果触发几率",
+	"mmorpg.stat_group.ailment_damage": "负面效果触发伤害",
+	"mmorpg.stat_group.ailment_duration": "负面效果时长",
+	"mmorpg.stat_group.ailment_proc-_chance": "负面效果击碎几率",
+	"mmorpg.stat_group.ele_damage": "元素伤害",
+	"mmorpg.stat_group.ele_pene": "元素穿透",
+	"mmorpg.stat_group.ele_spell_damage": "元素法术伤害",
+	"mmorpg.stat_group.max_resist": "最大抗性",
+	"mmorpg.stat_group.none": "None",
+	"mmorpg.stat_group.resist": "元素抗性",
+	"mmorpg.stat.magic_shield_on_kill": "击杀回复魔法护盾",
+	"mmorpg.stat.blood_on_kill": "击杀吸血",
+	"mmorpg.stat.energy_on_kill": "击杀回能",
+	"mmorpg.stat.spell_physical_damage": "物理技能伤害",
+	"mmorpg.stat.max_endurance_charge_charges": "'耐力'效果最大充能层数",
+	"mmorpg.stat.max_frenzy_charge_charges": "'狂乱'效果最大充能层数",
+	"mmorpg.stat.max_power_charge_charges": "'力量'效果最大充能层数",
+	"mmorpg.stat.endurance_charge_on_crit": "\u00A77\u00A7a[VAL1]\u00A77% 从暴击中充能'耐力'效果的机率",
+	"mmorpg.stat.endurance_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% 从攻击中充能'耐力'效果的机率",
+	"mmorpg.stat.frenzy_charge_on_crit": "\u00A77\u00A7a[VAL1]\u00A77% 从暴击中充能'狂乱'效果的机率",
+	"mmorpg.stat.frenzy_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% 从攻击中充能'狂乱'效果的机率",
+	"mmorpg.stat.gale_force_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% 从攻击中充能'狂风之力'效果的机率",
+	"mmorpg.stat.power_charge_on_crit": "\u00A77\u00A7a[VAL1]\u00A77% 从暴击中充能'力量'效果的机率",
+	"mmorpg.stat.power_charge_on_hit": "\u00A77\u00A7a[VAL1]\u00A77% 从攻击中充能'力量'效果的机率",
+	"mmorpg.stat.dmg_reduction_per_gale_force": "每层'狂风之力'充能提供的伤害减免",
+	"mmorpg.stat.dmg_per_power_charge": "每层'力量'充能带来的伤害提升",
+	"mmorpg.stat.crit_dmg_per_power_charge": "每层'力量'充能带来的暴击伤害提升",
+	"mmorpg.stat.ignore_ele_res": "暴击忽略的元素抗性",
+	"mmorpg.stat.aoe_per_power_charge": "每层'力量'充能提供的区域提升",
+	"mmorpg.stat.dmg_reduction_chance": "伤害减免几率",
+	"mmorpg.stat.energy_on_is_blocked": "每次格挡攻击时 \u00A77恢复 \u00A7a[VAL1]\u00A77 能量 ",
+	"mmorpg.stat.energy_on_is_dodged": "每次闪避攻击时 \u00A77恢复 \u00A7a[VAL1]\u00A77 能量",
+	"mmorpg.stat.health_on_is_blocked": "每次格挡攻击时 \u00A77恢复 \u00A7a[VAL1]\u00A77 生命",
+	"mmorpg.stat.health_on_is_dodged": "每次闪避攻击时 \u00A77恢复 \u00A7a[VAL1]\u00A77 生命",
+	"mmorpg.stat.move_speed_per_endurance_charge": "每层'耐力'充能带来的移速提升",
+	"mmorpg.stat.dmg_per_endurance_charge": "每层'耐力'充能带来的伤害提升",
+	"mmorpg.stat.block_per_endurance_charge": "每层'耐力'充能带来的格挡概率提升",
+	"mmorpg.stat.dodge_er_endurance_charge": "每层'耐力'充能带来的提升",
+	"mmorpg.stat.knockback_resist": "击退抗性",
+	"mmorpg.stat.summon_cast_time": "召唤冷却时间",
+	"mmorpg.stat.despair_immunity": "\u00A77你对混沌绝望免疫",
+	"mmorpg.stat.slow_immunity": "\u00A77你对减速免疫",
+	"mmorpg.stat.weak_immunity": "\u00A77你对元素虚弱免疫",
+	"mmorpg.stat.wounds_immunity": "\u00A77你对创伤免疫",
+	"mmorpg.stat.dmg_reduction": "伤害减免",
+	"mmorpg.stat.max_charm_charges": "Maximum Charm Stacks",
+	"mmorpg.stat.inc_effect_of_charge_buff_given": "充能效果强度",
+	"mmorpg.stat.inc_effect_of_charge_buff_on_you": "施加于你的所有充能效果的效力[VAL1]% ",
+	"mmorpg.stat.inc_effect_of_golem_buff_given": "傀儡效果强度",
+	"mmorpg.stat.inc_effect_of_golem_buff_on_you": "施加于你的所有傀儡效果的效力[VAL1]%",
+	
+	
+	"item.mmorpg.currency.chaos_orb": "混沌宝珠",
+	"mmorpg.currency.chaos_orb": "混沌宝珠",
+	"item.mmorpg.currency.desc.chaos_orb": "警告! 这个宝珠损坏、破坏(变成废品)或者升级这件装备,同时会把物品的潜能变为0, 这意味着该物品再也无法提升潜能",
+	"mmorpg.word.chaos_stat_success": "随机升级这件物品",
+	"mmorpg.currency.jewel_corrupt": "混沌迷人宝珠",
+	"item.mmorpg.currency.jewel_corrupt": "混沌迷人宝珠",
+	"item.mmorpg.currency.desc.jewel_corrupt": "损坏一件珠宝,赋予它额外的属性. 有概率摧毁它！",
+	"mmorpg.word.corruptsitemharvest": "将一件装备损坏 (无增益)",
+	"mmorpg.currency.entangled_potential": "混乱潜能宝珠",
+	"item.mmorpg.currency.entangled_potential": "混乱潜能宝珠",
+	"item.mmorpg.currency.desc.entangled_potential": "提升装备25%的潜能;或者损坏它(潜能变0),使其无法修改",
+	"mmorpg.currency.affix_common_reroll": "新开端宝珠",
+	"item.mmorpg.currency.affix_common_reroll": "新开端宝珠",
+	"item.mmorpg.currency.desc.affix_common_reroll": "将一个随机词缀重置为一个普通稀有的随机词缀",
+	"mmorpg.word.rerollsaffix": "重置一个词条",
+	"mmorpg.word.drag_no_work_creative": "拖拽交互在创造模式下无用\n(用法是在背包中拿起来悬空在装备上再单击就可以打到装备上了，创造模式下在工作台等有格子的地方拖拽也可以打，只不过要点两下)",
+	
+
+	"item.mmorpg.uber.map_uber1_tier0": "枯萎之境",
+	"item.mmorpg.uber.map_uber1_tier1": "枯萎之境",
+	"item.mmorpg.uber.map_uber1_tier2": "枯萎之境",
+	"mmorpg.item_tips.uber_boss_map_tip": "右键单击以创建地图 \n引导你进入一场BOSS战",
+	"item.mmorpg.uber.frag_uber1_tier0": "枯萎碎片",
+	"item.mmorpg.uber.frag_uber1_tier1": "枯萎碎片",
+	"item.mmorpg.uber.frag_uber1_tier2": "枯萎碎片",
+	"mmorpg.item_tips.uber_boss_frag_tip": "收集更多碎片以合成\n创建一个能引导你进入一个有 UBER BOSS 的地图",
+	"mmorpg.word.areacontains": "区域内有一个前往UBER BOSS所在地点的传送门",
+	"mmorpg.chat.resists_too_low_for_map": "您的抗性不足以前往这张地图",
+	
+		
+    "mmorpg.word.pressformoreinfo": "点击获取更多信息",
+	"mmorpg.word.classes": "职业技能树",
+	"mmorpg.word.hotbar": "技能",
+	"mmorpg.word.configs": "辅助功能",
+	
+
+    "mmorpg.word.automatic_pve": "智能 PVE\n\n开启这项功能的玩家被视为组队\n- 玩家之间有距离限制 (在配置文件中可以更改生效半径)",
+	"mmorpg.word.cast_fail_msgs": "技能使用失败消息\n\n将会在您释放技能失败的时候发送一条消息\n对新玩家很有帮助(还真是)",
+	"mmorpg.word.damage_messages": "在你对怪物造成伤害时在聊天栏显示一条信息\n\n你可以把鼠标悬停在信息上以获得更多内容",
+	"mmorpg.word.dmg_conflict_check": "模组冲突检测 [Debug 选项]\n\n检测挖矿与砍杀的伤害是否被其他模组影响.\n如果出现问题会发送消息告知您\n 这是一个 DEBUG 选项",
+	"mmorpg.word.mob_death_messages": "在你杀死怪物时在聊天栏一条信息\n\n你可以把鼠标悬停在信息上以获得更多内容,例如战利品掉落概率",
+	"mmorpg.word.stat_order_test": "统计顺序测试 [Debug 选项]\n当你攻击某个东西时,它会运行一些测试,以确保统计数据按正确的顺序工作,如果不按顺序工作,则会发送警告消息。仅在调试统计数据时使用。例如,暴击几率应该在暴击伤害统计数据之前工作”",
+	"mmorpg.word.disabled": "禁用",
+	"mmorpg.word.enabled": "启用",
+	"mmorpg.word.lockedsuppgemslot": "该辅助宝石插槽被锁定",
+	"mmorpg.word.nosocketedspell": "未选择技能",
+		"mmorpg.word.increasespelllevel": "提升你的技能等级以解锁该辅助宝石插槽!",
+	"mmorpg.word.increaseyourlevel": "提升你的挖矿与砍杀等级以解锁该辅助宝石插槽!",
+	"mmorpg.word.damage_message": "[%1$s] 造成了 %2$s %3$s",
+
+	
+	"mmorpg.stat.proc_blood_explosion": "\u00A77\u00A7a[VAL1]\u00A77% 在杀死敌人后引发一场鲜血爆炸的概率\n该爆炸会对范围内敌人造成伤害",
+	"mmorpg.stat.proc_ignite_explosion": "\u00A77\u00A7a[VAL1]\u00A77% 在杀死敌人后引发一场灼烧爆炸的概率\n该爆炸会对范围内敌人造成伤害",
+	"mmorpg.stat.proc_profane_explosion": "\u00A77\u00A7a[VAL1]\u00A77% 在杀死一名被诅咒的敌人后引发一场诅咒爆炸的概率\n该爆炸会对范围内敌人造成伤害",
+	"mmorpg.stat.proc_profane_explosion_any": "\u00A77\u00A7a[VAL1]\u00A77% 在杀死一名敌人后引发一场诅咒爆炸的概率\n该爆炸会对范围内敌人造成伤害",
+
 
 
 
