--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -131,3 +131,11 @@ v.5.5.8
 You can now choose to unbind the last 4 keybinds of the hotbar OR keep them and be able to cast the 2nd hotbar spells without swapping the hotbar
 - fix unique base stats
 - a few other fixes
+
+v5.5.9
+- added aggressive minions feature in mns hub
+- fixed uber frag dropping as lvl 50 always
+- fixed shatter/electrify benefiting from player stats.. twice. 
+- magic spells can no longer be dodged by dodge rating
+- spell dodge is now for dodging spells tagged as magic (it was int style before, meaning staff attacks were dodged)
+- fixed some map command blocks appearing client side
