--- a/src/main/resources/assets/mmorpg/lang/fr_fr.json
+++ b/src/main/resources/assets/mmorpg/lang/fr_fr.json
@@ -2896,10 +2896,10 @@
 	"mmorpg.stat_desc.beast_spell_dmg": "Augmente les Dégâts des Sorts ayant ce Tag. Par exemple Dégâts des Totems augmente les Dégâts infligés par les Totems, etc.",
 	"mmorpg.stat_desc.bleed_chance": "Chance d'appliquer l'Altération par Coup. La chance maximum est de 100%. Inflige 75% des Dégâts \u00A76\u2600 Physiques\u00A77 sur 5s.",
 	"mmorpg.stat_desc.bleed_damage": "Augmente les Dégâts infligés par l'Altération.",
-	"mmorpg.stat_desc.bleed_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",",
+	"mmorpg.stat_desc.bleed_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",
 	"mmorpg.stat_desc.bleed_proc_chance": "Déclenche les Dégâts accumulés de cette Altération",
 	"mmorpg.stat_desc.bleed_resistance": "Protège contre cette Altération, si c'est 100%, agît comme une immunité.",
-	"mmorpg.stat_desc.bleed_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",",
+	"mmorpg.stat_desc.bleed_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",
 	"mmorpg.stat_desc.block_chance": "Chance de bloquer les dégâts reçus d'un coup",
 	"mmorpg.stat_desc.block_per_endurance_charge": "Ajoute des Stats en fonction du nombre de Charges d'Effets que vous avez actuellement.",
 	"mmorpg.stat_desc.blood": "Le Sang est une ressource unique qui fonctionne comme le Mana.",
@@ -2912,10 +2912,10 @@
 	"mmorpg.stat_desc.buff_spell_dmg": "Augmente les Dégâts des Sorts ayant ce Tag. Par exemple Dégâts des Totems augmente les Dégâts infligés par les Totems, etc.",
 	"mmorpg.stat_desc.burn_chance": "Chance d'appliquer l'Altération par Coup. La chance maximum est de 100%. Inflige 75% des Dégâts de \u00A7c\u2600 Feu\u00A77 sur 3s.",
 	"mmorpg.stat_desc.burn_damage": "Augmente les Dégâts infligés par l'Altération.",
-	"mmorpg.stat_desc.burn_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",",
+	"mmorpg.stat_desc.burn_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",
 	"mmorpg.stat_desc.burn_proc_chance": "Déclenche les Dégâts accumulés de cette Altération",
 	"mmorpg.stat_desc.burn_resistance": "Protège contre cette Altération, si c'est 100%, agît comme une immunité.",
-	"mmorpg.stat_desc.burn_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",",
+	"mmorpg.stat_desc.burn_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",
 	"mmorpg.stat_desc.cast_speed": "Affecte le temps nécessaire pour lancer des sorts. Si le sort est instantané, il réduit le temps de recharge. Ne fonctionne que pour les sorts de type Magie",
 	"mmorpg.stat_desc.cast_speed_to_cooldown_cast_time": "Réduit le temps nécessaire pour lancer les sorts ayant ce type",
 	"mmorpg.stat_desc.cast_speed_to_cooldown_cdr": "Réduit le temps de recharge des sorts de ce type.",
@@ -2988,10 +2988,10 @@
 	"mmorpg.stat_desc.ele_trident_damage": "Augmente les Dégâts Élémentaires infligés s'ils sont causés par cette Arme",
 	"mmorpg.stat_desc.electrify_chance": "Chance d'appliquer l'Altération par Coup. La chance maximum est de 100%. Accumule 125% des Dégâts qui peuvent être déclenchés avec Foudroiement pour infliger des Dégâts Bonus de \u00A7e\u2600 Foudre\u00A77",
 	"mmorpg.stat_desc.electrify_damage": "Augmente les Dégâts infligés par l'Altération.",
-	"mmorpg.stat_desc.electrify_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",",
+	"mmorpg.stat_desc.electrify_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",
 	"mmorpg.stat_desc.electrify_proc_chance": "Déclenche les Dégâts accumulés des Altérations",
 	"mmorpg.stat_desc.electrify_resistance": "Protège contre cette Altération, si c'est 100%, agît comme une immunité.",
-	"mmorpg.stat_desc.electrify_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",",
+	"mmorpg.stat_desc.electrify_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",
 	"mmorpg.stat_desc.elemental_dmg_when_target_low_hp": "Vie Faible c'est 30% ou moins.",
 	"mmorpg.stat_desc.elemental_dot_damage": "Les dégâts de feu sur le temps augmentent les dégâts de brûlure par exemple..",
 	"mmorpg.stat_desc.enchanting_core_drop_bonus": "Les Butins des Métiers sont divisés en catégories, cette Stat augmente le Taux de Butin de l'une d'entre elles",
@@ -3028,10 +3028,10 @@
 	"mmorpg.stat_desc.fishing_triple_drop": "Chance que le Butin de Métier soit triplé, quand ça arrive",
 	"mmorpg.stat_desc.freeze_chance": "Chance d'appliquer l'Alteration par Coup. La valeur maximale est 100%. Ralentit les ennemis et accumule 100% des dégâts pouvant être déclenchés avec Fracassement pour infliger des dégâts bonus de \u00A7b\u2600 Froid\u00A77",
 	"mmorpg.stat_desc.freeze_damage": "Augmente les Dégâts infligés par l'Altération.",
-	"mmorpg.stat_desc.freeze_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",",
+	"mmorpg.stat_desc.freeze_duration": "Augmente la durée. Pour les Dégâts sur le Temps, cela augmente donc la quantité maximale de dégâts infligés, mais pas les dégâts par seconde.",
 	"mmorpg.stat_desc.freeze_proc_chance": "Déclenche les Dégâts accumulés des Altérations",
 	"mmorpg.stat_desc.freeze_resistance": "Protège contre cette Altération, si c'est 100%, agît comme une immunité.",
-	"mmorpg.stat_desc.freeze_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application.",",
+	"mmorpg.stat_desc.freeze_strength": "Renforce l'effet, si c'est des Dégâts sur le Temps, cela augmente les dégâts, sinon, cela réduit le montant de dégâts nécessaire à son application."
 	"mmorpg.stat_desc.full_swing_damage": "Dégâts bonus lorsque vous réalisez des attaques basiques de taille",
 	"mmorpg.stat_desc.gear_defense": "Modifie la vlaeur de base de défense de l'équipement, que cela soit de l'armure, de l'esquive ou du bouclier magique.",
 	"mmorpg.stat_desc.gear_weapon_damage": "Modifie la valeur de base de l'équipement",
